# SupaNuxt-Template

./: LICENSE  README.md  package.json  pnpm-workspace.yaml
.github/workflows/: docs.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  base.docker-compose.yml  docker-compose.yml  env.py  main.py  package.json  prod.docker-compose.yml  pyproject.toml  requirements.txt  supabase_client.py
api/docker/: dev.dockerfile  prod.dockerfile
api/routers/: cart.py  master.py
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
docs/.vitepress/theme/: style.css
docs/pages/: installation.md  introduction.md
docs/pages/backend/: backend.md
frontend/: .env  .env.dev  .env.example  .env.prod  app.vue  eslint.config.mjs  index.d.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  wrangler.toml
frontend/components/: ColorPicker.vue  CommandPalette.vue  ContainerPlaceholder.vue  LoadingIndicator.vue
frontend/components/auth/: LoginForm.vue  MasterAuth.vue  OAuthLogin.vue  ResetPassword.vue  SignUpForm.vue  UpdatePassword.vue  types.ts
frontend/components/card/: PrettyCard.vue
frontend/components/hero/: PageHero.vue
frontend/components/navbar/: Navbar.vue  NavbarMobile.vue  NavbarProfile.vue  NavbarProfileModal.vue
frontend/components/search/: CommandPalette.vue
frontend/composables/: index.ts
frontend/composables/commandPalette/: index.ts  useCommandPalette.ts
frontend/pages/: index.vue  login.vue  profile.vue
frontend/plugins/: eventBus.ts
supabase/: .env.example  docker-compose.yml  package.json
(+13 files in other folders)
