[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
rich = "^13.9.2"
supabase = "^2.9.0"
stripe = "^11.1.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
